# python-stack-demo

./: README.md  pyproject.toml
src/application/: api_exception_handler.py  controller.py
src/application/controllers/: alert_controller.py  sensor_controller.py
src/application/model/: error_code.py  non_pageable.py  pageable.py
src/core/: api_handler.py  kafka_handler.py
src/core/common/: config.py  exceptions.py  logger.py  uuid_utils.py
src/core/context/: context.py  object_proxy.py
src/core/kafka/: kafka_consumer.py  kafka_producer.py
src/domain/alert/: alert_model.py  alert_repository.py  alert_service.py
src/domain/sensor_data/: sensor_data_model.py  sensor_data_repository.py  sensor_data_service.py
src/domain/sensor_data_consumer/: sensor_data_consumer.py
src/domain/sensor_data_receiver/: sensor_data_receiver.py  sensor_message.py  sensor_model.py
tests/common/: base.py
tests/controllers/: test_alert_controller.py
tests/domain/: test_sensor_data_service.py
