[tool.poetry]
name = "python-stack-demo"
version = "0.1.0"
description = "The python stack demo project"
authors = ["Luiz Bonfioli <luiz.bonfioli@gmail.com>"]
readme = "README.md"
packages = [
    {include = "application"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = "^0.23.1"
confluent-kafka = "2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "4.1.0"
coverage = "7.2.7"
httpx = "^0.24.1"
parameterized = "^0.9.0"
pylint = "3.1.0"
setuptools = "^70.3.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

src_paths = ["src"]
known_thirdparty = ["pytest", "requests", "typing_extensions", "fastapi", "mangum"]
known_first_party = ["src"]